terraform/main.tf
provider "aws" {
  region = var.aws_region
}

resource "aws_ecr_repository" "app_repo" {
  name = "django-celery-repo"
}

resource "aws_security_group" "django_sg" {
  name        = "django-microservice-sg"
  description = "Allow HTTP and SSH traffic"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [var.allowed_ssh_cidr]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 8000
    to_port     = 9000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_instance" "django_host" {
  ami                    = var.ami_id
  instance_type          = var.instance_type
  vpc_security_group_ids = [aws_security_group.django_sg.id]
  key_name               = var.key_name
  
  root_block_device {
    volume_size = var.root_volume_size
  }

  user_data = file("${path.module}/user-data.sh")

  tags = {
    Name = "DjangoCeleryApp"
  }
}
